--- a/index.html
+++ b/index.html
@@ -210,16 +210,17 @@ element.classList.toggle("hidden");
           </div>
         </div>
         <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"><svg xmlns="http://www.w3.org/2000/svg" width="49" height="49" viewBox="0 0 49 49" fill="none">
+  <button type="button" class="swiper-button-prev">
+    <svg xmlns="http://www.w3.org/2000/svg" width="49" height="49" viewBox="0 0 49 49" fill="none">
     <circle cx="24.5" cy="24.5" r="24.5" transform="rotate(-180 24.5 24.5)" fill="black"/>
     <path d="M28.1738 31.8506L20.8238 24.5006" stroke="white" stroke-linecap="round"/>
     <path d="M20.8242 24.501L28.1742 17.151" stroke="white" stroke-linecap="round"/>
-  </svg></div>
-  <div class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="49" height="49" viewBox="0 0 49 49" fill="none">
+  </svg></button>
+  <button  type="button" class="swiper-button-next"><svg xmlns="http://www.w3.org/2000/svg" width="49" height="49" viewBox="0 0 49 49" fill="none">
     <circle cx="24.5" cy="24.5" r="24.5" fill="black"/>
     <path d="M20.8262 17.1494L28.1762 24.4994" stroke="white" stroke-linecap="round"/>
     <path d="M28.1758 24.499L20.8258 31.849" stroke="white" stroke-linecap="round"/>
-    </svg></div>
+    </svg></button>
       </div>
         <p class="small_text_bottom">
           The sets are made from 100% post-consumer recycled (PCR) paper printed with soy inks. Some sets include an internal tray made from
@@ -455,7 +456,7 @@ element.classList.toggle("hidden");
         </div>
 
            <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev new_swiper_prev">
+    <button  type="button"  class="swiper-button-prev new_swiper_prev">
       <svg class="hidden-mobile" xmlns="http://www.w3.org/2000/svg" width="20" height="38" viewBox="0 0 20 38" fill="none">
         <path d="M19 37L1 19" stroke="black" stroke-width="2" stroke-linecap="round"/>
         <path d="M1 19L19 1" stroke="black" stroke-width="2" stroke-linecap="round"/>
@@ -465,8 +466,8 @@ element.classList.toggle("hidden");
         <path d="M31.0488 35.1006L22.9488 27.0006" stroke="black" stroke-linecap="round"/>
         <path d="M22.9492 27.001L31.0492 18.901" stroke="black" stroke-linecap="round"/>
         </svg>
-    </div>
-    <div class="swiper-button-next new_swiper_next">
+    </button>
+    <button  type="button"  class="swiper-button-next new_swiper_next">
       <svg class="hidden-desktop" xmlns="http://www.w3.org/2000/svg" width="54" height="54" viewBox="0 0 54 54" fill="none">
         <circle cx="27" cy="27" r="27" fill="white"/>
         <path d="M22.9512 18.8994L31.0512 26.9994" stroke="black" stroke-linecap="round"/>
@@ -477,7 +478,7 @@ element.classList.toggle("hidden");
         <path d="M1 1L19 19" stroke="black" stroke-width="2" stroke-linecap="round"/>
         <path d="M19 19L1 37" stroke="black" stroke-width="2" stroke-linecap="round"/>
       </svg>
-    </div>
+    </button>
       </div>
           
       </section>
