--- a/index.html
+++ b/index.html
@@ -613,6 +613,7 @@ element.classList.toggle("hidden");
         $(document).ready(function(){
           var swiper = new Swiper(".products_swiper", {  
             cssMode: true,
+            spaceBetween: 20,
       breakpoints: {
       640: {
         slidesPerView: 1,
@@ -620,7 +621,7 @@ element.classList.toggle("hidden");
       768: {
         slidesPerView: 3,
       },
-      1100: {
+      1150: {
         slidesPerView: 4,
       },
     }, // Navigation arrows
