--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ element.classList.toggle("hidden");
           <video playsinline="" preload="metadata" __idm_id__="18644993" poster="./assets/who-is-louis-final-16x9-poster.png">
             <source src="./assets/who-is-louis-final-16x9.mp4" type="video/mp4">
           </video>
-          <div class="video-control vidButton">
+          <button class="video-control vidButton">
             <span class="video-control-play">
               <svg xmlns="http://www.w3.org/2000/svg" width="84" height="97" viewBox="0 0 84 97" fill="none">
                 <path d="M84 48.5L0.749995 96.5644L0.75 0.435585L84 48.5Z" fill="white"/>
@@ -300,7 +300,7 @@ element.classList.toggle("hidden");
             <span class="video-control-pause">
               <span class="video-control-label"></span>
             </span>
-          </div> 
+          </button> 
       </div>
       </section>
 
@@ -349,7 +349,7 @@ element.classList.toggle("hidden");
           <video playsinline="" preload="metadata" __idm_id__="18644993" poster="./assets/asmr_poster.png">
             <source src="./assets/ASMR_16x9.mp4" type="video/mp4">
           </video>
-          <div class="video-control vidButton">
+          <button class="video-control vidButton">
             <span class="video-control-play">
               <svg xmlns="http://www.w3.org/2000/svg" width="84" height="97" viewBox="0 0 84 97" fill="none">
                 <path d="M84 48.5L0.749995 96.5644L0.75 0.435585L84 48.5Z" fill="white"/>
@@ -358,7 +358,7 @@ element.classList.toggle("hidden");
             <span class="video-control-pause">
               <span class="video-control-label"></span>
             </span>
-          </div> 
+          </button> 
       </div>
       </section>
 
