--- a/gift_guide.html
+++ b/gift_guide.html
@@ -435,7 +435,7 @@ element.classList.toggle("hidden");
                   <img src="assets/sec_08_01.png">
                   <p class="pdp_title">Dry Texturizing Spray</p>
                   <a class="btn btn--primary btn--md width-100% text-uppercase"
-                  href="#" target="_blank">
+                  href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Signature/Dry-Texturizing-Spray/p/400129" target="_blank">
                   SHOP NOW — $53.00
                  </a>
               </div>
