--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Gold Lust Collection.png">
                 <p class="pdp_title">Gold Lust Collection</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="#" target="_blank">
+                href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Gifting/Gold-Lust-Collection/p/402297" target="_blank">
                 SHOP NOW — $115.00
                </a>
             </div>
@@ -164,7 +164,7 @@ element.classList.toggle("hidden");
               <img src="assets/Hair Alchemy Collection.png">
               <p class="pdp_title">Hair Alchemy Collection</p>
               <a class="btn btn--primary btn--md width-100% text-uppercase"
-              href="#" target="_blank">
+              href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/New-%26-Notable/Hair-Alchemy-Collection/p/402299" target="_blank">
               SHOP NOW — $115.00
              </a>
           </div>
@@ -172,7 +172,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Signature Style Set.png">
                 <p class="pdp_title">Signature Style Set</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="#" target="_blank">
+                href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Bestsellers/Signature-Style-Set/p/402301" target="_blank">
                 SHOP NOW — $72.00
                </a>
             </div>
@@ -180,7 +180,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Hair Alchemy Travel Set.png">
                 <p class="pdp_title">Hair Alchemy Travel Set</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="#" target="_blank">
+                href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/New-%26-Notable/Hair-Alchemy-Travel-Set/p/402304" target="_blank">
                 SHOP NOW — $50.00
                </a>
             </div>
@@ -188,7 +188,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Shine & Style Set.png">
                 <p class="pdp_title">Shine & Style Set</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="#" target="_blank">
+                href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Signature/Shine-%26-Style-Travel-Set/p/402306" target="_blank">
                 SHOP NOW — $35.00
                </a>
             </div>
@@ -196,7 +196,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Côte d’Azur Fragrance & Body Collection.png">
                 <p class="pdp_title">Côte d’Azur Fragrance & Body Collection</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="#" target="_blank">
+                href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Body-%26-Fragrance/C%C3%B4te-d%E2%80%99Azur/C%C3%B4te-d%E2%80%99Azur-Fragrance-%26-Body-Collection/p/402311" target="_blank">
                 SHOP NOW — $195.00
                </a>
             </div>
@@ -204,7 +204,7 @@ element.classList.toggle("hidden");
               <img src="assets/Gold Lust Liter Set.png">
               <p class="pdp_title">Gold Lust Liter Set</p>
               <a class="btn btn--primary btn--md width-100% text-uppercase"
-              href="#" target="_blank">
+              href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Gold-Lust/Gold-Lust-Liter-Set/p/402309" target="_blank">
               SHOP NOW — $295.00
              </a>
           </div>
