--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ element.classList.toggle("hidden");
     
     var swiper3 = new Swiper(".mobile_slider_images", {  
       cssMode: true,
+      spaceBetween: 20,
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
@@ -669,6 +670,8 @@ element.classList.toggle("hidden");
     }); 
     var swiper3 = new Swiper(".mobile_slider_images_2", {  
       cssMode: true,
+      spaceBetween: 20,
+      
       autoplay: {
         delay: 2500,
         disableOnInteraction: false,
