--- a/index.html
+++ b/index.html
@@ -631,6 +631,10 @@ element.classList.toggle("hidden");
   },
     }); 
     var swiper2 = new Swiper(".image_with_text_swiper", {  
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
       cssMode: true,
       breakpoints: {
       640: {
