--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@ element.classList.toggle("hidden");
         delay: 2500,
         disableOnInteraction: false,
       },
+      loop: true,
       cssMode: true,
       breakpoints: {
       640: {
@@ -660,6 +661,7 @@ element.classList.toggle("hidden");
         delay: 2500,
         disableOnInteraction: false,
       },
+      loop: true,
       pagination: {
         el: ".swiper-pagination",
         clickable: true,
@@ -679,7 +681,7 @@ element.classList.toggle("hidden");
     var swiper3 = new Swiper(".mobile_slider_images_2", {  
       cssMode: true,
       spaceBetween: 20,
-
+      loop: true,
       autoplay: {
         delay: 2500,
         disableOnInteraction: false,
