--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ element.classList.toggle("hidden");
         </div>
 
            <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev new_swiper_prev">
+    <button type="button" class="swiper-button-prev new_swiper_prev">
       <svg class="hidden-mobile" xmlns="http://www.w3.org/2000/svg" width="20" height="38" viewBox="0 0 20 38" fill="none">
         <path d="M19 37L1 19" stroke="black" stroke-width="2" stroke-linecap="round"/>
         <path d="M1 19L19 1" stroke="black" stroke-width="2" stroke-linecap="round"/>
@@ -466,8 +466,8 @@ element.classList.toggle("hidden");
         <path d="M31.0488 35.1006L22.9488 27.0006" stroke="black" stroke-linecap="round"/>
         <path d="M22.9492 27.001L31.0492 18.901" stroke="black" stroke-linecap="round"/>
         </svg>
-    </div>
-    <div  class="swiper-button-next new_swiper_next">
+      </button>
+    <button type="button"   class="swiper-button-next new_swiper_next">
       <svg class="hidden-desktop" xmlns="http://www.w3.org/2000/svg" width="54" height="54" viewBox="0 0 54 54" fill="none">
         <circle cx="27" cy="27" r="27" fill="white"/>
         <path d="M22.9512 18.8994L31.0512 26.9994" stroke="black" stroke-linecap="round"/>
@@ -478,7 +478,7 @@ element.classList.toggle("hidden");
         <path d="M1 1L19 19" stroke="black" stroke-width="2" stroke-linecap="round"/>
         <path d="M19 19L1 37" stroke="black" stroke-width="2" stroke-linecap="round"/>
       </svg>
-    </div>
+    </button>
       </div>
           
       </section>
