--- a/index.html
+++ b/index.html
@@ -612,6 +612,7 @@ element.classList.toggle("hidden");
 
         $(document).ready(function(){
           var swiper = new Swiper(".products_swiper", {  
+            clickable: true,
             cssMode: true,
             spaceBetween: 20,
       breakpoints: {
@@ -631,7 +632,7 @@ element.classList.toggle("hidden");
   },
     }); 
     var swiper2 = new Swiper(".image_with_text_swiper", {  
-     
+      clickable: true,
       loop: true,
       cssMode: true,
       breakpoints: {
@@ -660,6 +661,7 @@ element.classList.toggle("hidden");
     }); 
     
     var swiper3 = new Swiper(".mobile_slider_images", {  
+      clickable: true,
       cssMode: true,
       spaceBetween: 20,
       autoplay: {
@@ -683,7 +685,8 @@ element.classList.toggle("hidden");
       }
     }
     }); 
-    var swiper3 = new Swiper(".mobile_slider_images_2", {  
+    var swiper3 = new Swiper(".mobile_slider_images_2", {
+      clickable: true,
       cssMode: true,
       spaceBetween: 20,
       loop: true,
