--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ element.classList.toggle("hidden");
             </div>
             <div class="single_product_grid swiper-slide">
                 <img src="assets/Shine & Style Set.png">
-                <p class="pdp_title">Shine & Style Set</p>
+                <p class="pdp_title">Shine and Style Travel Set</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
                 href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Signature/Shine-%26-Style-Travel-Set/p/402306" target="_blank">
                 SHOP NOW — $35.00
@@ -211,7 +211,7 @@ element.classList.toggle("hidden");
               <p class="pdp_title">Gold Lust Liter Set</p>
               <a class="btn btn--primary btn--md width-100% text-uppercase"
               href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Gold-Lust/Gold-Lust-Liter-Set/p/402309" target="_blank">
-              SHOP NOW — $295.00
+              SHOP NOW — $305.00
              </a>
           </div>
         </div>
