--- a/gift_guide.html
+++ b/gift_guide.html
@@ -108,7 +108,7 @@ element.classList.toggle("hidden");
                 For the Holiday 2023 Collection, Oribe collaborated with multidisciplinary artist and designer Louis Barthélemy to bring to life our unique expression of heritage craftsmanship and vivid storytelling through seven limited-edition gift sets.
             </p>
             <a class="btn btn--primary btn--md width-100% text-uppercase"
-              href="#" target="_blank">
+              href="/index.html" target="_blank">
               LEARN MORE ABOUT THE COLLABORATION
              </a>
           </div>
@@ -465,7 +465,7 @@ element.classList.toggle("hidden");
                   <p class="pdp_title">Gold Lust Dry Shampoo</p>
                   <a class="btn btn--primary btn--md width-100% text-uppercase"
                   href="https://www.oribe.com/oribestorefront/oribe/en/-/Collections/Gold-Lust/Gold-Lust-Dry-Shampoo/p/400100" target="_blank">
-                  SHOP NOW — $52.00
+                  SHOP NOW — $48.00
                  </a>
               </div>
               <div class="single_product_grid">
