--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@ element.classList.toggle("hidden");
     </svg></div>
       </div>
         <p class="small_text_bottom">
-          The sets are made from 100% post-consumer recycled (PCR) paper printed with soy inks. Some sets include an internal tray made from
-          100% biodegradable and renewable bamboo and bagasse, an agricultural waste derived from sugarcane.
+          The boxes are made using FSC Certified, Green Seal Certified, minimum 30% post-consumer fiber papers using a chlorine free process, soy inks and renewable electricity. Internal trays are made from 100% biodegradable and renewable plant fiber. Recyclable.
         </p>
     </section>
     <section class="section_07"> 
