--- a/gift_guide.html
+++ b/gift_guide.html
@@ -777,7 +777,7 @@ element.classList.toggle("hidden");
           </section>
 
       <section class="section_09 position-sticky bottom-0">
-        <a class="btn btn--primary btn--md width-100% text-uppercase" href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Gifting/c/gifting" target="_blank">Shop Now</a>
+        <a class="btn btn--primary btn--md width-100% text-uppercase" href="https://www.oribe.com/collections/gifting-shop-all" target="_blank">Shop Now</a>
       </section>
 
       <footer class="footer">
@@ -826,54 +826,54 @@ element.classList.toggle("hidden");
                   <li>
                     <a
                       class="footer-nav-link footer-nav-link-alt"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/carry-us"
+                      href="https://www.oribe.com/pages/carry-us"
                       >CARRY US</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/about"
+                      href="https://www.oribe.com/pages/about"
                       >ABOUT</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link footer-nav-link-alt"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/contact-us"
+                      href="https://support.oribe.com/hc/en-us"
                       >CONTACT</a
                     >
                   </li>
                   <li>
-                    <a class="footer-nav-link" href="http://www.kaocareers.com/"
+                    <a class="footer-nav-link" href="https://www.kao.com/americas/en/careers/"
                       >CAREERS</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link footer-nav-link-alt"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/faqs"
+                      href="https://support.oribe.com/hc/en-us"
                       >FAQS</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/privacy-policy"
+                      href="https://www.kao.com/americas/en/privacy/"
                       >PRIVACY POLICY</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link footer-nav-link-alt"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/termsAndConditions"
+                      href="https://www.oribe.com/pages/terms-conditions"
                       >TERMS&CONDITIONS</a
                     >
                   </li>
                   <li>
                     <a
                       class="footer-nav-link"
-                      href="https://www.oribe.com/oribestorefront/oribe/en/store-finder"
+                      href="https://www.oribe.com/pages/salon-finder"
                       >SALON LOCATOR</a
                     >
                   </li>
