reverted last commit

--- a/gift_guide.html
+++ b/gift_guide.html
@@ -44,23 +44,23 @@ element.classList.toggle("hidden");
       <div class="o-header">
         <div class="o-header-inner">
           <div class="oh-col-logo">
-            <a href="https://www.oribe.com/" class="oh-logo">
+            <a href="https://www.oribe.com" class="oh-logo">
             <span class="oribe text-segment"></span>
             </a>
           </div>
           <div class="oh-col-nav">
             <ul class="oh-header-nav">
-              <li><a href="https://www.oribe.com/collections/shop-all-hair" class="oh-header-nav-link">HAIR</a></li>
-              <li><a href="https://www.oribe.com/collections/fragrance-body-shop-all" class="oh-header-nav-link">FRAGRANCE&BODY</a>
-              <li><a href="https://www.oribe.com/collections/shop-all-travel" class="oh-header-nav-link">TRAVEL</a></li>
+              <li><a href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/c/oribe-hair" class="oh-header-nav-link">HAIR</a></li>
+              <li><a href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Body-%26-Fragrance/c/body-fragrance" class="oh-header-nav-link">FRAGRANCE&BODY</a>
+              <li><a href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Travel/c/travel" class="oh-header-nav-link">TRAVEL</a></li>
             
               </li>
             </ul>
           </div>
           <div class="oh-col-cart">
             <ul class="oh-navlist">
-              <li><a class="oh-navlist-link" href="https://www.oribe.com/">ACCOUNT</a></li>
-              <li><a class="oh-navlist-link" href="https://www.oribe.com/">BAG</a></li>
+              <li><a class="oh-navlist-link" href="https://oribe.com/oribestorefront/oribe/en/login">ACCOUNT</a></li>
+              <li><a class="oh-navlist-link" href="https://oribe.com/oribestorefront">BAG</a></li>
             </ul>
           </div>
         </div>
