updated links and logo in the footer

--- a/gift_guide.html
+++ b/gift_guide.html
@@ -891,7 +891,7 @@ element.classList.toggle("hidden");
             <div class="footer-right text-center">
               <div class="footer-image">
                 <img
-                  src="https://www.oribe.com/oribestorefront/_ui/responsive/theme-oribe/img/navigation/kao_logo@3x.png"
+                  src="//www.oribe.com/cdn/shop/files/kao_logo_3x_74f5097d-bb6d-4387-b53e-3bdfa70679e0.png?v=1697210692&width=128"
                 />
               </div>
             </div>
