--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ element.classList.toggle("hidden");
                 <img src="assets/Hair Alchemy Travel Set.png">
                 <p class="pdp_title">Hair Alchemy Travel Set</p>
                 <a class="btn btn--primary btn--md width-100% text-uppercase"
-                href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/New-%26-Notable/Hair-Alchemy-Travel-Set/p/402304" target="_blank">
+                href="https://www.oribe.com/products/hair-alchemy-travel-set" target="_blank">
                 SHOP NOW — $50.00
                </a>
             </div>
@@ -504,7 +504,7 @@ element.classList.toggle("hidden");
 
 
       <section class="section_09 position-sticky bottom-0">
-        <a class="btn btn--primary btn--md width-100% text-uppercase" href="https://www.oribe.com/oribestorefront/oribe/en/-/Shop-All/Gifting/c/gifting" target="_blank">Shop Now</a>
+        <a class="btn btn--primary btn--md width-100% text-uppercase" href="https://www.oribe.com/collections/gifting-shop-all" target="_blank">Shop Now</a>
       </section>
 
       <footer class="footer">
